# llm-wiki

./: .gitignore  PHILOSOPHY.md  README.md  TODO.md  pyproject.toml
docs/: LLM Wiki - Knowledge Base Pattern.md  Multi-Turn Traversal Pattern.md  Traversal Implementation.md  agent-individuality-philosophy-session-2026-04-07.md  gallery.md  issue-types.md  scientific-articles-in-the-llm-era.md  what-is-an-agent-identity-and-soul.md
docs/implementation-ideas/: 01-intelligent-re-reading.md  02-compaction-with-tmp-index.md  03-pre-fetching-with-metadata.md  04-turn-0-optimization.md  05-parallel-agents.md  06-programmatic-context-tuning.md  07-attention-aware-prompt-ordering.md  08-pre-seeding-with-vector-keyword-lookup.md  09-working-agent-context-for-tool-calls.md  10-gap-filling-agent.md  11-semantic-claim-identity.md  README.md
skills/llm-wiki/: index.md  ingest.md  maintain.md  research.md  write.md
skills/setup/: SKILL.md
src/: traversal.py
src/llm_wiki/: config.py  manifest.py  page.py  severity.py  tokens.py  vault.py
tests/: conftest.py  test_config.py  test_config_backend_profiles.py  test_daemon_integration.py  test_integration.py  test_manifest.py  test_manifest_store.py  test_page.py  test_tokens.py  test_vault.py
tests/test_adversary/: test_adversary_talk_type.py  test_agent.py  test_claim_extractor.py  test_integration.py  test_prompts.py  test_sampling.py  test_synthesis_skip.py
tests/test_audit/: test_audit_integration.py  test_auditor.py  test_checks.py  test_compliance.py  test_compliance_synthesis.py  (+5 more)
wiki/: index.md  log.md
(+203 files in other folders)
