[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "Agent-first knowledge base tool — wiki over RAG"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "tantivy>=0.22.0",
    "click>=8.0",
]

[project.scripts]
llm-wiki = "llm_wiki.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]
